--- a/app/sass/lib/_mixins.sass
+++ b/app/sass/lib/_mixins.sass
@@ -40,3 +40,13 @@
     border: 1px solid $ca-blue-700
     border-radius: 24px
     padding: 0.5rem 1.2rem 0.7rem 1.4rem
+    transition: 200ms ease-in-out
+    &:hover
+        color: white
+        transition: 200ms ease-in-out
+        background-color: $ca-blue-600
+    &:active
+        color: white
+        transition: 200ms ease-in-out
+        background-color: $ca-blue-600
+
