--- a/app/sass/main.scss
+++ b/app/sass/main.scss
@@ -1739,22 +1739,22 @@ RESPONSIVE
     }
   }
 
-  footer {
-    padding: 2.5rem 0 2.5rem 0;
-    font-size: 0.9rem;
-    width: 100%;
-    text-align: center;
+  // footer {
+  //   padding: 2.5rem 0 2.5rem 0;
+  //   font-size: 0.9rem;
+  //   width: 100%;
+  //   text-align: center;
 
-    ul {
-      justify-content: center;
-      display: flex;
-      flex-flow: row wrap;
+  //   ul {
+  //     justify-content: center;
+  //     display: flex;
+  //     flex-flow: row wrap;
 
-      li {
-        margin: 0 1.3rem 0 0;
-      }
-    }
-  }
+  //     li {
+  //       margin: 0 1.3rem 0 0;
+  //     }
+  //   }
+  // }
 
   .background {
     .circle {
