--- a/app/sass/partials/_projects.sass
+++ b/app/sass/partials/_projects.sass
@@ -77,6 +77,7 @@ $windowWidth: 100vw
             display: grid
             grid-template-rows: $windowWidth/20 1fr auto
             grid-gap:16px
+            grid-template-columns: 1fr
             .year_and_cta
                 .date
                     height: 24px
