--- a/app/sass/partials/_recentPublications.sass
+++ b/app/sass/partials/_recentPublications.sass
@@ -1,8 +1,37 @@
 @import '../lib/_variables.sass'
 
+._publications._recent_publications
+    display: grid
+    display: grid
+    grid-template-rows: repeat(3, 1fr)
+    grid-template-columns: repeat(2, 1fr)
+
+    gap: $spacing_xsm
+    height: 100%
+
+.article-0
+    grid-column: 1 / span 2
+    grid-row: 1 / span 3
+
+.article-1
+    grid-column: 1 / span 2
+    grid-row: 4 / span 3
+
+.article-2
+    grid-column: 3 / span 2
+    grid-row: 1 / span 5
+
+.more
+    grid-column: 3 / span 2
+    grid-row: 6 / span 1
+    display: flex
+    align-items: center
+    justify-content: center
+
 .article
     display: flex
-    margin: $spacing_md
+    flex-direction: column
+    margin: $spacing_xsm
     @apply bg-gray-50
 
     .article_stroke.color-orange
@@ -15,6 +44,7 @@
         border: 4px solid $ca-blue-400
 
     .article_content
+        gap: $spacing_xsm
         display: flex
         flex-direction: column
         padding-left: $spacing_sm
