--- a/app/sass/main.scss
+++ b/app/sass/main.scss
@@ -31,7 +31,6 @@
   margin-bottom: 10px;
 }
 
-
 /* ==========================================================================
     VARIABLES
    ========================================================================== */
@@ -46,7 +45,6 @@ TYPOGRAPHY
 @import url("https://fonts.googleapis.com/css2?family=Montserrat+Alternates:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap");
 // import monserrat
 // import new sans serif;
-
 
 @mixin nav_bar {
   width: 100%;
@@ -141,13 +139,12 @@ TYPOGRAPHY
   margin-top: 60px;
   height: 13.8vw;
   background-image: url("/assets/img/headers/header-one.png");
-  background-size:cover;
+  background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
   // object-fit: cover;
   display: flex;
   align-items: flex-end;
-
 
   h1 {
     padding: 0 0 $spacing_sm $spacing_xl;
@@ -157,7 +154,6 @@ TYPOGRAPHY
 
 body,
 html {
-  
   h2 {
     font-weight: lighter;
   }
@@ -255,7 +251,7 @@ header {
 
 main {
   padding: 2rem 0 0 0;
-  margin:0.8rem
+  margin: 0.8rem;
 }
 
 .box-shadow {
@@ -688,6 +684,7 @@ main {
  ========================================================================== */
 
 .tools {
+  background-color: white;
   .nav_bar {
     background-color: inherit;
     color: inherit;
@@ -739,27 +736,8 @@ main {
         }
       }
 
-      .tool {
-        display: flex;
-        flex-flow: row wrap;
-        justify-content: space-evenly;
-        border-radius: 4px;
-        @apply border-gray-200 border-2;
-        padding: 2rem 2rem 2rem 2rem;
 
-        .tool_logo {
-          width: 10%;
-          margin: 0.8rem 0 0 0;
-          filter: brightness(0);
-          -webkit-filter: brightness(0) ;
-
-          img {
-            object-fit: contain;
-            object-position: top;
-            width: 100%;
-            height: 100%;
-          }
-        }
+      
 
         .tool_main {
           width: 70%;
@@ -789,7 +767,7 @@ main {
         }
       }
     }
-  }
+  
 
   .border_nav_bar {
     border-bottom: solid 1.5px lighten($color: $black, $amount: 7);
@@ -824,7 +802,6 @@ main {
     flex-direction: column;
     //background-color: red;
   }
-
 }
 
 // .research {
@@ -1258,7 +1235,7 @@ RESPONSIVE
 @media (max-width: 940px) {
   header {
     padding: 1.5rem 0 1.6rem 0;
-   
+
     .menu {
       width: 100%;
       font-weight: $semi-bold;
@@ -1272,9 +1249,7 @@ RESPONSIVE
         font-size: 1.2rem;
       }
     }
-   
   }
-
 
   .home {
     margin: 0 4rem 0 4rem;
@@ -1296,12 +1271,11 @@ RESPONSIVE
     }
   }
   .banner {
-    margin-top: 104px
+    margin-top: 104px;
   }
 }
 
 @media (max-width: 800px) {
-
   .home {
     margin: 0 2rem 0 2rem;
 
@@ -1318,9 +1292,8 @@ RESPONSIVE
     h2 {
       font-size: 1.5rem;
     }
-    
-    .body {
 
+    .body {
       display: block;
       width: 100%;
 
@@ -1367,19 +1340,15 @@ RESPONSIVE
       .our_tools {
         padding: 3.5rem 0 0 0;
 
-        .tool {
-          padding: 3rem 1rem 3rem 3rem;
-
-          .tool_title {
-            h2 {
-              font-size: 2rem;
-            }
+        .tool_title {
+          h2 {
+            font-size: 2rem;
           }
+        }
 
-          .tool_content {
-            h3 {
-              font-size: 1.5rem;
-            }
+        .tool_content {
+          h3 {
+            font-size: 1.5rem;
           }
         }
       }
@@ -1498,7 +1467,6 @@ RESPONSIVE
         }
       }
     }
-   
   }
   .banner {
     margin-top: 40px;
@@ -1535,7 +1503,6 @@ RESPONSIVE
     }
 
     .body {
-      
       .carousel {
         h3 {
           font-size: 1.5rem;
@@ -1547,8 +1514,8 @@ RESPONSIVE
       }
       .latest_publications {
         padding: 0;
-        p{
-          padding:0
+        p {
+          padding: 0;
         }
       }
     }
@@ -1596,9 +1563,7 @@ RESPONSIVE
       .our_tools {
         padding: 3.5rem 0 0 0;
 
-        .tool {
-          flex-flow: column;
-          padding: 2rem 1rem 2rem 2rem;
+      
 
           .tool_title {
             h2 {
@@ -1606,7 +1571,6 @@ RESPONSIVE
             }
           }
 
-          
           .tool_description {
             width: 140%;
 
@@ -1614,7 +1578,7 @@ RESPONSIVE
               font-size: 1rem;
             }
           }
-        }
+        
       }
     }
   }
@@ -1680,7 +1644,7 @@ RESPONSIVE
         }
 
         .teammate {
-         // padding: 3rem 2rem 3rem 2rem;
+          // padding: 3rem 2rem 3rem 2rem;
 
           .mate_info {
             width: 95%;
