--- a/app/sass/main.scss
+++ b/app/sass/main.scss
@@ -450,53 +450,80 @@ main {
 
     .grid_container {
       width: 100%;
-      display: grid;
-      grid-template-columns: repeat(3, 1fr);
-      grid-template-rows: auto auto;
-      gap: 10px;
+
+      // display: grid;
+      // grid-template-columns: repeat(3, 1fr);
+      // grid-template-rows: auto auto;
+      // gap: 10px;
     }
-
+    
     .grid_item {
+      // display: flex;
+      // flex-direction: column;
+      justify-content: space-between;
       @apply text-white;
-      @apply bg-primary;
-      padding: 0.5rem 1.5rem 0.5rem 1.5rem;
+      
+      padding: 2rem 4rem 2rem 4rem;
       border-radius: 8px;
+      // max-height: fit-content;
+      // max-height: 12rem;
+      // text-align: center;
 
-      h5 {
-        font-weight: $semibold;
+
+    //   h5 {
+    //     font-weight: $semibold;
+    //   }
+    // }
+
+
+    }
+    // .width-1{
+    //   width:60%;
+    // }
+    // .width-2{
+    //   width:80%;
+    // }
+    // .width-3{
+    //   width: 100%;
+    // }
+    
+    @media (max-width: 600px) {
+      .width-1, .width-2, .width-3 {
+        width: 100%; /* Full width for mobile */
       }
     }
-
+    
+    @media (min-width: 601px) and (max-width: 900px) {
+      .width-1, .width-2 {
+        width: 50%; /* Half width for tablet */
+      }
+      .width-3 {
+        width: 100%; /* Full width for tablet */
+      }
+    }
     .top_left {
-      grid-column: 1 / 2;
-      grid-row: 1 / 2;
+      background: linear-gradient(139deg, rgba(83,64,255,0.9) 0%, rgba(111,199,255,0.9) 100%);
+      
     }
-
+    
     .top_mid {
-      grid-column: 2 / 4;
-      grid-row: 1 / 2;
-    }
-
+      background: linear-gradient(25deg, rgba(83,64,255,0.9) 44%, rgba(111,199,255,0.9) 100%)    }
+    
     .top_right {
-      grid-column: 4/6;
-      grid-row: 1 / 2;
+      background: linear-gradient(320deg, rgba(83,64,255,0.9) 0%, rgba(196,141,116,0.9) 100%)
     }
-
+    
     .bottom_left {
-      grid-column: 1 / 3;
-      grid-row: 2 / 3;
+      background: linear-gradient(to top, rgba(83,64,255,0.9) 0%, rgba(83,64,255,0.9) 30%, rgba(196,141,116,0.9) 100%)
     }
-
+    
     .bottom_mid {
-      grid-column: 3 / 4;
-      grid-row: 2 / 3;
+      background: linear-gradient(225deg,  rgba(255,127,0,0.8748686974789917)0%, rgba(192,112,168,0.8860731792717087) 100%) 
     }
-
+    
     .bottom_right {
-      grid-column: 4 / 6;
-      grid-row: 2 / 3;
+      background: linear-gradient(180deg, rgba(255,127,0,0.8748686974789917) 0%,rgba(133,90,186,0.930891106442577) 70%)
     }
-
     .latest_publications {
       // width: 30%;
       object-fit: cover;
