--- a/app/sass/partials/_recentPublications.sass
+++ b/app/sass/partials/_recentPublications.sass
@@ -1,38 +1,55 @@
 @import '../lib/_variables.sass'
 
 ._publications._recent_publications
-    display: grid
-    display: grid
-    grid-template-rows: repeat(3, 1fr)
-    grid-template-columns: repeat(2, 1fr)
+    // display: grid
+    // display: grid
+    // grid-template-rows: repeat(3, 1fr)
+    // grid-template-columns: repeat(2, 1fr)
 
     gap: $spacing_xsm
     height: 100%
 
 .article-0
-    grid-column: 1 / span 2
-    grid-row: 1 / span 3
+    // grid-column: 1 / span 2
+    // grid-row: 1 / span 3
 
 .article-1
-    grid-column: 1 / span 2
-    grid-row: 4 / span 3
+    // grid-column: 1 / span 2
+    // grid-row: 4 / span 3
 
 .article-2
-    grid-column: 3 / span 2
-    grid-row: 1 / span 5
+    // grid-column: 3 / span 2
+    // grid-row: 1 / span 5
 
 .more
-    grid-column: 3 / span 2
-    grid-row: 6 / span 1
+    // grid-column: 3 / span 2
+    // grid-row: 6 / span 1
     display: flex
-    align-items: center
-    justify-content: center
+    width: fit-content
+    align-items: right
+    justify-content: right
+.large-article
+    height: calc(100% - 36rem)
+    grid-row-end: span 2
+    margin-bottom: $spacing_xl
+
+/* If you need specific responsive adjustments */
+@media (min-width: 900px)
+.large-article
+    transition: height 0.3s ease, width 0.3s ease
+    height: calc(100vh - 36rem)
+    margin-bottom: $spacing_xl
 
 .article
+    transition: 200ms ease-in-out
     display: flex
     flex-direction: column
     margin: $spacing_xsm
     @apply bg-gray-50
+    &:hover
+        transition: 200ms ease-in-out
+
+        @apply bg-gray-100
 
     .article_stroke.color-orange
         border: 4px solid $ca-or-300
