--- a/app/sass/lib/_mixins.sass
+++ b/app/sass/lib/_mixins.sass
@@ -65,3 +65,17 @@
         transition: 200ms ease-in-out
         background-color: $ca-blue-600
 
+@mixin invisible-button
+    border-radius: 24px
+    @apply text-gray-800
+    padding: 0.5rem 1.2rem 0.7rem 1.4rem
+    transition: 200ms ease-in-out
+    &:hover
+        @apply text-gray-900
+        transition: 200ms ease-in-out
+        background-color: $ca-blue-100
+    &:active
+        @apply text-ca_blue-800
+        transition: 200ms ease-in-out
+        background-color: $ca-blue-300
+
