--- a/app/sass/lib/_mixins.sass
+++ b/app/sass/lib/_mixins.sass
@@ -79,3 +79,75 @@
         transition: 200ms ease-in-out
         background-color: $ca-blue-300
 
+//NAVEGACIÓN
+@mixin nav_bar 
+  width: 100%
+  display: flex
+  flex-flow: wrap row
+  justify-content: space-between
+  align-items: center
+  transition: 0.5s
+  padding: 1.5rem 0 1.5rem 0
+  box-shadow: 0px 4px 4px 0px rgba(29, 29, 27, 0.15)
+
+  .imagotype 
+    width: 100%
+    display: flex
+    justify-content: center
+    flex-flow: wrap row
+    justify-content: space-between
+    align-items: center
+    // padding-left: 4rem;
+
+    .isotype 
+      display: flex
+      width: 4rem
+      height: auto
+      margin: 0 0 0 2rem
+
+      .logoheader 
+        width: 2.75rem
+
+    .logotype 
+      display: flex
+      width: auto
+      font-size: 1.7rem
+      font-weight: $bold
+      font-family: $montserrat-alternates
+      color: $blue_primary
+
+      padding: 0 12rem 0 0.7rem
+
+      span 
+        color: $ca-or-300
+
+  .menu_icon 
+    .close 
+      display: none
+    
+
+    .show 
+      padding: 2% 0 0 0
+      display: none
+      position: absolute
+      top: 26.5%
+      right: 6.5%
+
+  .menu 
+    //width: 55%
+    font-weight: $semi-bold
+    margin: 0 3rem 0 0
+    display: flex
+    justify-content: space-between
+    flex-wrap: nowrap
+
+    ul 
+      display: flex
+      flex-flow: row nowrap
+      justify-content: space-between
+      font-size: 1.2rem
+      li
+        margin-left: 0.6rem
+    
+  
+
